# Claude-Security-agent

./: .gitignore  ARTICLE-COMPARISON.md  CLAUDE.md  COMPARISON-V1-V2-OUTPUT.md  DESIGN-V2.md  DESIGN.md  REQUIREMENTS.md  SCAN-REPORT-V2-Z3.md  SECURITY-REPORT.md  USAGE.md  pyproject.toml  run_scan.py
docs/: architecture-diagrams.md
experiments/pure_llm_review/: COMPARISON.md  PROMPTS.md
experiments/research/: LLM-ZERO-DAY-DISCOVERY.md
src/: main.py
src/agents/: base.py
src/common/: checkpoint.py  chunker.py  config.py  findings.py  graph.py  llm_client.py
src/knowledge/: schema.py
src/orchestrator/: scanner.py
src/skills/: compliance_mapping_skills.py  cpg_graph_skills.py  cwe_knowledge.py  dynamodb_access_skills.py  frontend_security_skills.py  infra_graph_skills.py  infra_security_skills.py  langgraph_security_skills.py  orchestrator_skills.py  python_remediation_skills.py  python_taint_skills.py  secrets_detection_skills.py  validation_skills.py
v2/: FINAL-REPORT-V2.md  correlator.py  cot_engine.py  cot_prompts.md  cot_verdicts.md  report_generator.py  run_v2.sh  semgrep_rules.yaml  semgrep_rules_frontend.yaml  semgrep_rules_gaps.yaml  validation_verdicts.md
v2/results/: all_findings_combined.json  compound_findings.json  frontend_findings.json  gap_findings.json  infra_findings.json  semgrep_findings.json  semgrep_raw.json
v3/: DESIGN-V3.md  orchestrator.py  run_v3.py
v4/: TASKS.md  run_v4.py
v5/: DESIGN.md  HYBRID-DESIGN.md  evidence_package.py  run_v5.py
v6/: DESIGN.md  architecture-diagrams.md  evidence_package.py  run_v6.py
(+104 files in other folders)
