[project]
name = "security-agent"
version = "0.6.0"
description = "Hybrid zero-day security scanner: deterministic analysis + LLM reasoning + Z3 formal proofs"
requires-python = ">=3.9"
dependencies = [
    "networkx>=2.6",
    "boto3>=1.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
]
z3 = [
    "z3-solver>=4.12.0",
]
terraform = [
    "python-hcl2>=4.0",
]
full = [
    "z3-solver>=4.12.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "semgrep>=1.60.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
security-scan = "src.main:main"
secagent = "v6.run_v6:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
